<resources>
    <string name="app_name">Kriger Campus</string>
    <string name="facebook_app_id">750243738753047</string>
    <string name="title_activity_create_update_profile">CreateUpdateProfileActivity</string>
    <string name="facebook_login_protocol_scheme">fb750243738753047</string>
    <string name="preference_file_key">com.kriger.krigercampus.Preference</string>
    <string name="termsandconditions">Click Register, If you agree to our <a href="https://kriger.in/term-conditions"> <![CDATA[<font color=#1D85FE><u><b>terms and conditions.<br/></b></u></font>]]></a>You will receive verification mail.</string>
    <string name="termsandconditionsresource">By proceeding you agree to our <a href="https://kriger.in/term-conditions"> <![CDATA[<font color=#1D85FE><u><b>terms and conditions.<br/></b></u></font>]]></a></string>
    <string name="grp_guidelines">Groups have <b>UNLIMITED MEMBERSHIP</b>. \n You can make groups to  \n \n  <b>PREPARE FOR : </b>Competitive Exams, Interviews\n <b>DISCUSS : </b>Projects, Assignment, Books\n <b>ORGANISE : </b>Study Groups, Local meetups

</string>
    <string name="social_score_text2">Increase your : Profile Rank, Post Views, Connection Requests</string>
    <string name="social_score_text1"> Your Kriger Score is the number of people who joined YOU in the mission of making India 100% literate. Benefits of inviting friends.</string>
    <string name="social_score_text"> \n\nYour Kriger Score is the number of people who joined YOU in the mission of making India 100% literate.\n\n</string>
    <string name="newpost1">Report useless posts</string>
    <string name="pending_invitation">Pending \n Invitation</string>
    <string name="newpost2">How can  <![CDATA[<font color=#F44336>YOU</font>]]> <![CDATA[ make India 100% literate?<br />]]> </string>
    <string name="newpost"> <![CDATA[<b><font color=#1D85FE>Discuss : </font></b>]]><![CDATA[  Questions, Concepts, Chapters<br />]]> <![CDATA[<b><font color=#1D85FE>Share : </font></b>]]><![CDATA[ Notes<br />]]><![CDATA[<b><font color=#1D85FE>Help aspirants with : </font></b>]]> <![CDATA[ Exam preparation tips, Interview tips, College experience<br />]]><![CDATA[<b><font color=#1D85FE>Update : </font></b>]]> <![CDATA[ Exam &amp; form dates <br/><br />]]>

    </string>
    <string name="post_tips_heading">Post to build your personal brand and grow your network. \n \n Here are the most important posting guidelines</string>
    <string name="connection_tips_heading">Build your network before you need it</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="creation1">Unlike WhatsApp and Telegram\n1.Kriger Groups have an unlimited membership.\n2.You can add members from across Kriger Network without the need of saving their details.\n3.Every post and its comments are separate from each other to help you keep track of the discussion.</string>
    <string name="creation2">You can create groups for academic purposes for example\n\n1.Internships\n2.Placements\n3.Competitive exams\n4.Interview preparation\n5.General Knowledge\n6.English Vocabulary\n7.Job updates\n8.Group Discussions\n9.Group projects\n10.College committees</string>
    <string name="creation3">Please note you are allowed to create a ‘Group’ at Kriger Campus app solely for academic purposes.\n\nA Group has NO membership limit.\n\nStill, it’s suggested to keep the members count small for easy management of communication.\n\nA group has to be responsibly managed by its owners and admins.\n\nAvoid adding minors and strangers in your group.\n\nThe practice of hate speech, sensationalism, fear-mongering, and unparliamentary language is not at all allowed.</string>
    <string name="group_tips_heading">Create group only for academic purposes.\n \nGroups have no membership limit still don’t create huge groups which you can’t moderate.\n \nGroup owner and admins are responsible for the members added and content posted by those members.\n \nDon’t create groups with minors who don’t know each other – no parent wants their kids talking to strangers.\n \nThe group is not a political platform no unparliamentary, explicit, adult or irrelevant information no arguing, no heated opinions, no fear mongering, no hyped up drama, no fake news. Check your sources before you share.\n \nDon’t add random people.\n </string>
    <string name="your_ideas_worth_spreading_group_creation">
     <![CDATA[<font color=#F44336>Any instance of non-adherence or violation of these guidelines may be legally punishable under IT act, IPC & Cybercrime Law.</font>]]>
     </string>
    <string name="no_krigers">Connect with other krigers to grow your network.</string>
    <string name="likes">&#160;<u>likes</u>&#160;</string>
    <string name="no_notifications">No Notifications!</string>
    <string name="type_your_response">Share your thoughts!</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="done">Done</string>
    <string name="changepwd">Change Password</string>
    <string name="suggest_new_features">Suggest Features or Whats wrong?</string>
    <string name="what_s_wrong">What\'s Wrong</string>
    <string name="fields_can_be_left_empty">Fields can be left empty.</string>
    <string name="submit">Submit</string>
    <string name="post_hint"><![CDATA[Grow your knowledge by sharing photo, text or file.<br/> Don’t post any political or unparliamentary content.<br/>]]><![CDATA[ Check the Tips for more information.]]></string>
    <string name="post">Post</string>
    <string name="mention">@</string>
    <string name="post_tips">Tips</string>
    <string name="no_likes_yet">No likes yet.</string>
    <string name="email">Email</string>
    <string name="gotit">Got it!</string>
    <string name="having_trouble">Having Trouble ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="your_ideas_worth_spreading"> <![CDATA[<b><font color=#1D85FE>Share Updates : <br/></font></b>]]><![CDATA[ Exam dates<br />]]><![CDATA[ Form release dates<br />]]><![CDATA[ Daily college life updates<br /><br/>]]>

        <![CDATA[<b><font color=#1D85FE>Inspire others by sharing : <br/> </font></b>]]><![CDATA[  Interview experience <br/> Interview preparation tips<br/> Exam preparation strategy<br/> Internship experience<br/> Quick Tips<br /><br/>]]>

        <![CDATA[<b><font color=#1D85FE>Discuss : <br/> </font></b>]]><![CDATA[  Questions <br/> Concepts<br/> Books<br/> Industry News and Research<br/> In-Depth How-To and List-Style Posts Chapters<br /><br/>]]>

        <![CDATA[<b><font color=#1D85FE>Ask for feedback on : <br/> </font></b>]]><![CDATA[  Research paper<br/> College projects<br/> Start-up ideas<br/> Prototypes<br/> Assignments<br /><br/>]]>

        <![CDATA[<b><font color=#1D85FE>Share good news : <br/> </font></b>]]><![CDATA[  Passing an exam<br/> Passing certification course<br/> Winning a competition<br/> Raising funds<br /><br/>]]>

        <![CDATA[<b><font color=#1D85FE>Announce : <br/> </font></b>]]><![CDATA[  Seminars<br/> Tedx talks<br/> Fest & events<br/> Book launch<br/> Collaboration<br/> CSR activities<br /><br/>]]>

         <![CDATA[<b><font color=#1D85FE>Search : <br/> </font></b>]]><![CDATA[  Co-founders<br/> Internships<br/> Investors<br/> Mentor<br/> Advisor<br/> Volunteers<br /><br/>]]>

         <![CDATA[<b><font color=#1D85FE>Organise : <br/> </font></b>]]><![CDATA[  Meetups<br/> Study groups]]>

     </string>
    <string name="your_ideas_worth_spreading_connection"> <![CDATA[<b><font color=#1D85FE>To Create Opportunities : <br/></font></b>]]><![CDATA[ You never know who can present you with the next opportunity. Connect with people who can help you in achieving your next education goal.<br /><br/>]]>
         <![CDATA[<b><font color=#1D85FE>To gather info : <br/> </font></b>]]><![CDATA[ Connect to gather information about exams, colleges etc.<br/>]]>

     </string>
    <string name="why_post_guidelines">1. Publishing on Kriger Campus provides more value to connections who view your profile.\n2. Your network can share your post, opening you up to a larger (and previously unreached) audience.\n3. If your post is popular it will be shared by Kriger Campus official account, your potential reach is exponentially increased.\n4. Publishing valuable content on Kriger Campus positions you as an authority on your topic.</string>
    <string name="how_post_guidelines">Based on the trends of our community one post per day maximum to two posts a week minimum, this keeps your profile on top of your network.</string>
    <string name="how_connection_guidelines">It is the best education networking tool available today, and it is absolutely free.\nDedicate real time and effort to make the most of your connections, and you will establish worthwhile long-term relationships.
Don’t SPAM with connection requests.\nDo treat your profile as your professional brochure. Use an appropriate-looking profile image and put in complete and up-to-date information. This will be your first impression for many.</string>
    <string name="whom_connection_guidelines">Connect with other Krigers who can add value to your education plan.
Take the time to find common ground based on your profiles and consider how you can bring reciprocal value. <![CDATA[<b><font color=#1D85FE><br/><br/>Search Profiles : <br/></font></b>]]><![CDATA[ Search for profiles based on your requirements and connect with only the required profiles do not blanket connect with every profile you see.<br /><br/>]]>
         <![CDATA[<b><font color=#1D85FE>To Find Your Tribe : <br/> </font></b>]]><![CDATA[ Finding others who share your education interests is a great way to build your professional community.<br/>]]>

</string>
    <string name="see_more"><![CDATA[<b><font color= #1D85FE>See More</font></b>]]></string>
    <string name="otp_for_verification">OTP would be send to the following number for verification:</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="otp_code">OTP Code</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="registered_email">Your Registered Email</string>
    <string name="invite">Invite</string>
    <string name="please_wait">Please Wait!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Agree &amp; Register</string>
    <string name="no_suggestions">Kudos!! \n You have exhausted your daily connection limit. \n Kriger Campus ensures quality networking by suggesting profiles only for YOU based on multiple parameters. \n Be back here tomorrow for more suggestions.</string>
    <string name="suggestions">Suggested Krigers for you</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="contact_deny">Oops! We need your permission to help you</string>
    <string name="no_invites_yet">No Invites Yet!</string>
    <string name="invitations">Pending Invitations</string>
    <string name="view_krigers">Your Network</string>
    <string name="add_contacts">Invite Friends</string>
    <string name="no_contacts_to_show">No contacts to show.</string>
    <string name="invite_all">Invite All</string>
    <string name="unchanged_name"><![CDATA[<font color= #F44336>*</font>]]>Name cannot be changed after you register.</string>
    <string name="mandtory_fields"><![CDATA[<font color= #F44336>*</font>]]> Indicates required field</string>
    <string name="upload_profile_picture_bio"><![CDATA[<font color= #F44336>*</font>]]>Update your profile picture and bio</string>
</resources>