<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="in.kriger.newkrigercampus.activities.ChangePasswordActivity">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/key"
        android:id="@+id/kc_icon"
        android:paddingBottom="8dp"/>


    <in.kriger.newkrigercampus.extras.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_above="@+id/etext_newpass"
        android:textSize="18sp"
        android:textColorHint="@color/Blue"
        android:hint="@string/old_password"
        android:id="@+id/etext_oldpass"/>
    <in.kriger.newkrigercampus.extras.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password"
        android:textSize="18sp"
        android:textColorHint="@color/Blue"
        android:layout_centerVertical="true"
        android:id="@+id/etext_newpass"
        android:inputType="textPassword"/>

    <in.kriger.newkrigercampus.extras.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/confirm_new_password"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColorHint="@color/Blue"
        android:inputType="textPassword"
        android:layout_below="@+id/etext_newpass"
        android:id="@+id/etext_cnewpass"/>

    <in.kriger.newkrigercampus.extras.CustomButton
        android:id="@+id/btn_changepass"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:background="@drawable/profile_bar_gradient_round"
        android:padding="7dp"
        android:text="@string/changepwd"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp" />


</RelativeLayout>


