<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resend_verification_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"

    tools:context="in.kriger.newkrigercampus.ResendVerificationEmail">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/kriger_logo"
        android:id="@+id/kc_icon"
        android:layout_marginBottom="45dp"/>

    <in.kriger.newkrigercampus.extras.CustomTextView
        android:id="@+id/textview_req"
        android:layout_marginTop="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Your account is not verified.\nTo receive verification mail, fill your details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:padding="5dp"
        android:textSize="15sp"/>


    <in.kriger.newkrigercampus.extras.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registered_email"
        android:textSize="15sp"
        android:layout_marginTop="250dp"
        android:textColor="@color/Black"
        android:textColorHint="@color/Blue"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/editText_resend_email" />

    <in.kriger.newkrigercampus.extras.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="310dp"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Black"
        android:textColorHint="@color/Blue"
        android:id="@+id/editText_resend_password"
        />


    <in.kriger.newkrigercampus.extras.CustomButton
        android:id="@+id/button_resend_send"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:background="@drawable/profile_bar_gradient_round"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>
